--- a/package.json
+++ b/package.json
@@ -9,21 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.1",
+    "@expo/vector-icons": "^14.0.2",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "expo": "~51.0.23",
+    "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.3",
     "react-native-gesture-handler": "^2.18.0",
+    "react-native-maps": "1.14.0",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "^3.14.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-screens": "3.31.1",
-    "@expo/vector-icons": "^14.0.2",
-    "react-native-web": "~0.19.10",
-    "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.2.1"
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
